--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/ProcessingPassDialog.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/ProcessingPassDialog.ui
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<ui version="4.0">
+<ui version="4.0" >
  <class>ProcessingPassDialog</class>
- <widget class="QDialog" name="ProcessingPassDialog">
-  <property name="geometry">
+ <widget class="QDialog" name="ProcessingPassDialog" >
+  <property name="geometry" >
    <rect>
     <x>0</x>
     <y>0</y>
@@ -10,143 +9,52 @@
     <height>342</height>
    </rect>
   </property>
-  <property name="palette">
-   <palette>
-    <active>
-     <colorrole role="Button">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>170</red>
-        <green>178</green>
-        <blue>249</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Base">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>255</red>
-        <green>255</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Window">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>193</red>
-        <green>193</green>
-        <blue>221</blue>
-       </color>
-      </brush>
-     </colorrole>
-    </active>
-    <inactive>
-     <colorrole role="Button">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>170</red>
-        <green>178</green>
-        <blue>249</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Base">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>255</red>
-        <green>255</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Window">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>193</red>
-        <green>193</green>
-        <blue>221</blue>
-       </color>
-      </brush>
-     </colorrole>
-    </inactive>
-    <disabled>
-     <colorrole role="Button">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>170</red>
-        <green>178</green>
-        <blue>249</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Base">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>193</red>
-        <green>193</green>
-        <blue>221</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Window">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>193</red>
-        <green>193</green>
-        <blue>221</blue>
-       </color>
-      </brush>
-     </colorrole>
-    </disabled>
-   </palette>
-  </property>
-  <property name="windowTitle">
+  <property name="windowTitle" >
    <string>Feicim - Processing Pass Viewer</string>
   </property>
-  <layout class="QGridLayout">
-   <item row="0" column="0">
-    <widget class="QWidget" name="widget" native="true">
-     <layout class="QGridLayout">
-      <item row="0" column="0">
-       <widget class="QTabWidget" name="tabwidget">
-        <property name="currentIndex">
+  <layout class="QGridLayout" >
+   <item row="0" column="0" >
+    <widget class="QWidget" native="1" name="widget" >
+     <layout class="QGridLayout" >
+      <item row="0" column="0" >
+       <widget class="QTabWidget" name="tabwidget" >
+        <property name="currentIndex" >
          <number>0</number>
         </property>
-        <widget class="QWidget" name="tab">
-         <attribute name="title">
+        <widget class="QWidget" name="tab" >
+         <attribute name="title" >
           <string>PassGroup</string>
          </attribute>
-         <layout class="QHBoxLayout"/>
+         <layout class="QHBoxLayout" />
         </widget>
        </widget>
       </item>
      </layout>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QGroupBox" name="groupBox">
-     <property name="title">
+   <item row="1" column="0" >
+    <widget class="QGroupBox" name="groupBox" >
+     <property name="title" >
       <string>Description</string>
      </property>
-     <layout class="QHBoxLayout">
+     <layout class="QHBoxLayout" >
       <item>
-       <widget class="QLabel" name="label">
-        <property name="text">
+       <widget class="QLabel" name="label" >
+        <property name="text" >
          <string>Total Processing pass</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="lineEdit">
-        <property name="readOnly">
+       <widget class="QLineEdit" name="lineEdit" >
+        <property name="readOnly" >
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="closeButton">
-        <property name="text">
+       <widget class="QPushButton" name="closeButton" >
+        <property name="text" >
          <string>Close</string>
         </property>
        </widget>
