--- a/LHCbDIRAC/BookkeepingSystem/Gui/Widget/TreeWidget.ui
+++ b/LHCbDIRAC/BookkeepingSystem/Gui/Widget/TreeWidget.ui
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<ui version="4.0">
+<ui version="4.0" >
  <class>TreeWidget</class>
- <widget class="QWidget" name="TreeWidget">
-  <property name="geometry">
+ <widget class="QWidget" name="TreeWidget" >
+  <property name="geometry" >
    <rect>
     <x>0</x>
     <y>0</y>
@@ -10,228 +9,56 @@
     <height>736</height>
    </rect>
   </property>
-  <property name="palette">
-   <palette>
-    <active>
-     <colorrole role="Button">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>170</red>
-        <green>178</green>
-        <blue>249</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Base">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>255</red>
-        <green>255</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Window">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>193</red>
-        <green>193</green>
-        <blue>221</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Link">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>129</red>
-        <green>167</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="AlternateBase">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>255</red>
-        <green>255</green>
-        <blue>127</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="ToolTipBase">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>255</red>
-        <green>255</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
-    </active>
-    <inactive>
-     <colorrole role="Button">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>170</red>
-        <green>178</green>
-        <blue>249</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Base">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>255</red>
-        <green>255</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Window">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>193</red>
-        <green>193</green>
-        <blue>221</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Link">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>129</red>
-        <green>167</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="AlternateBase">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>255</red>
-        <green>255</green>
-        <blue>127</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="ToolTipBase">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>255</red>
-        <green>255</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
-    </inactive>
-    <disabled>
-     <colorrole role="Button">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>170</red>
-        <green>178</green>
-        <blue>249</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Base">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>193</red>
-        <green>193</green>
-        <blue>221</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Window">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>193</red>
-        <green>193</green>
-        <blue>221</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Link">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>129</red>
-        <green>167</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="AlternateBase">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>255</red>
-        <green>255</green>
-        <blue>127</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="ToolTipBase">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>255</red>
-        <green>255</green>
-        <blue>255</blue>
-       </color>
-      </brush>
-     </colorrole>
-    </disabled>
-   </palette>
-  </property>
-  <property name="windowTitle">
+  <property name="windowTitle" >
    <string>Form</string>
   </property>
-  <property name="autoFillBackground">
+  <property name="autoFillBackground" >
    <bool>true</bool>
   </property>
-  <layout class="QGridLayout" name="gridLayout_2">
-   <item row="0" column="0" rowspan="3">
-    <widget class="QWidget" name="Bookmarks" native="true"/>
+  <layout class="QGridLayout" name="gridLayout_2" >
+   <item rowspan="3" row="0" column="0" >
+    <widget class="QWidget" native="1" name="Bookmarks" />
    </item>
-   <item row="0" column="1">
-    <widget class="QGroupBox" name="groupBox">
-     <property name="title">
+   <item row="0" column="1" >
+    <widget class="QGroupBox" name="groupBox" >
+     <property name="title" >
       <string/>
      </property>
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0">
-       <widget class="QCheckBox" name="standardQuery">
-        <property name="text">
+     <layout class="QGridLayout" name="gridLayout" >
+      <item row="0" column="0" >
+       <widget class="QCheckBox" name="standardQuery" >
+        <property name="text" >
          <string>Standard</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QCheckBox" name="advancedQuery">
-        <property name="text">
+      <item row="0" column="1" >
+       <widget class="QCheckBox" name="advancedQuery" >
+        <property name="text" >
          <string>Advanced Queries</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="1" colspan="2">
-       <widget class="QLineEdit" name="pageSize">
-        <property name="text">
+      <item row="4" column="1" colspan="2" >
+       <widget class="QLineEdit" name="pageSize" >
+        <property name="text" >
          <string>ALL</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
+      <item row="4" column="0" >
+       <widget class="QLabel" name="label" >
+        <property name="text" >
          <string>Page Size:</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="3">
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
+      <item row="4" column="3" >
+       <spacer name="horizontalSpacer" >
+        <property name="orientation" >
          <enum>Qt::Horizontal</enum>
         </property>
-        <property name="sizeHint" stdset="0">
+        <property name="sizeHint" stdset="0" >
          <size>
           <width>40</width>
           <height>20</height>
@@ -239,59 +66,22 @@
         </property>
        </spacer>
       </item>
-      <item row="0" column="3">
-       <widget class="QPushButton" name="bookmarksButton">
-        <property name="palette">
-         <palette>
-          <active>
-           <colorrole role="Button">
-            <brush brushstyle="SolidPattern">
-             <color alpha="255">
-              <red>249</red>
-              <green>244</green>
-              <blue>171</blue>
-             </color>
-            </brush>
-           </colorrole>
-          </active>
-          <inactive>
-           <colorrole role="Button">
-            <brush brushstyle="SolidPattern">
-             <color alpha="255">
-              <red>249</red>
-              <green>244</green>
-              <blue>171</blue>
-             </color>
-            </brush>
-           </colorrole>
-          </inactive>
-          <disabled>
-           <colorrole role="Button">
-            <brush brushstyle="SolidPattern">
-             <color alpha="255">
-              <red>249</red>
-              <green>244</green>
-              <blue>171</blue>
-             </color>
-            </brush>
-           </colorrole>
-          </disabled>
-         </palette>
-        </property>
-        <property name="autoFillBackground">
+      <item row="0" column="3" >
+       <widget class="QPushButton" name="bookmarksButton" >
+        <property name="autoFillBackground" >
          <bool>false</bool>
         </property>
-        <property name="text">
+        <property name="text" >
          <string>Bookmarks</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="2">
-       <spacer name="horizontalSpacer_2">
-        <property name="orientation">
+      <item row="0" column="2" >
+       <spacer name="horizontalSpacer_2" >
+        <property name="orientation" >
          <enum>Qt::Horizontal</enum>
         </property>
-        <property name="sizeHint" stdset="0">
+        <property name="sizeHint" stdset="0" >
          <size>
           <width>40</width>
           <height>20</height>
@@ -299,9 +89,9 @@
         </property>
        </spacer>
       </item>
-      <item row="0" column="4">
-       <widget class="QToolButton" name="closeButton">
-        <property name="text">
+      <item row="0" column="4" >
+       <widget class="QToolButton" name="closeButton" >
+        <property name="text" >
          <string>...</string>
         </property>
        </widget>
@@ -309,117 +99,80 @@
      </layout>
     </widget>
    </item>
-   <item row="1" column="1">
-    <widget class="QTreeWidget" name="tree">
-     <property name="enabled">
+   <item row="1" column="1" >
+    <widget class="QTreeWidget" name="tree" >
+     <property name="enabled" >
       <bool>true</bool>
      </property>
-     <property name="palette">
-      <palette>
-       <active>
-        <colorrole role="Base">
-         <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>254</red>
-           <green>255</green>
-           <blue>230</blue>
-          </color>
-         </brush>
-        </colorrole>
-       </active>
-       <inactive>
-        <colorrole role="Base">
-         <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>254</red>
-           <green>255</green>
-           <blue>230</blue>
-          </color>
-         </brush>
-        </colorrole>
-       </inactive>
-       <disabled>
-        <colorrole role="Base">
-         <brush brushstyle="SolidPattern">
-          <color alpha="255">
-           <red>229</red>
-           <green>225</green>
-           <blue>197</blue>
-          </color>
-         </brush>
-        </colorrole>
-       </disabled>
-      </palette>
-     </property>
-     <property name="cursor" stdset="0">
+     <property name="cursor" stdset="0" >
       <cursorShape>ArrowCursor</cursorShape>
      </property>
-     <property name="styleSheet">
-      <string notr="true"/>
+     <property name="styleSheet" >
+      <string notr="true" />
      </property>
-     <property name="lineWidth">
+     <property name="lineWidth" >
       <number>1</number>
      </property>
-     <property name="verticalScrollBarPolicy">
+     <property name="verticalScrollBarPolicy" >
       <enum>Qt::ScrollBarAsNeeded</enum>
      </property>
-     <property name="horizontalScrollBarPolicy">
+     <property name="horizontalScrollBarPolicy" >
       <enum>Qt::ScrollBarAsNeeded</enum>
      </property>
-     <property name="tabKeyNavigation">
+     <property name="tabKeyNavigation" >
       <bool>true</bool>
      </property>
-     <property name="textElideMode">
+     <property name="textElideMode" >
       <enum>Qt::ElideNone</enum>
      </property>
-     <property name="sortingEnabled">
+     <property name="sortingEnabled" >
       <bool>true</bool>
      </property>
-     <property name="animated">
+     <property name="animated" >
       <bool>false</bool>
      </property>
      <column>
-      <property name="text">
+      <property name="text" >
        <string>                                Tree                                                     </string>
       </property>
      </column>
      <column>
-      <property name="text">
+      <property name="text" >
        <string>Description</string>
       </property>
      </column>
     </widget>
    </item>
-   <item row="2" column="1">
-    <widget class="QGroupBox" name="selection">
-     <property name="title">
+   <item row="2" column="1" >
+    <widget class="QGroupBox" name="selection" >
+     <property name="title" >
       <string>Queries</string>
      </property>
-     <layout class="QGridLayout">
-      <item row="0" column="0">
-       <widget class="QRadioButton" name="configNameRadioButton">
-        <property name="text">
+     <layout class="QGridLayout" >
+      <item row="0" column="0" >
+       <widget class="QRadioButton" name="configNameRadioButton" >
+        <property name="text" >
          <string>SimCond/ProcessingPass/Eventtype/Production/FileType/Program/Files</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QRadioButton" name="radioButton_2">
-        <property name="text">
+      <item row="1" column="0" >
+       <widget class="QRadioButton" name="radioButton_2" >
+        <property name="text" >
          <string>Event type/SimCond/ProcessingPass/Production/FileType/Program/Files</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
-       <widget class="QRadioButton" name="productionRadioButton">
-        <property name="text">
+      <item row="2" column="0" >
+       <widget class="QRadioButton" name="productionRadioButton" >
+        <property name="text" >
          <string>Production lookup</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="0">
-       <widget class="QRadioButton" name="runLookup">
-        <property name="text">
+      <item row="3" column="0" >
+       <widget class="QRadioButton" name="runLookup" >
+        <property name="text" >
          <string>Run lookup</string>
         </property>
        </widget>
@@ -428,8 +181,8 @@
     </widget>
    </item>
   </layout>
-  <action name="configNameRadioButton">
-   <property name="text">
+  <action name="configNameRadioButton" >
+   <property name="text" >
     <string>config_click</string>
    </property>
   </action>
